test/libsolidity/syntaxTests/operators/custom/operator_bound_to_all_types.sol
using {add as +} for *;

function add(int, int) returns (int) {
    return 0;
}

// ----
// SyntaxError 8118: (0-23): The type has to be specified explicitly at file level (cannot use '*').
